@@ -17,57 +17,62 @@
 package com.badlogic.gdx.graphics.g3d.environment;
 
 import com.badlogic.gdx.graphics.Color;
-import com.badlogic.gdx.graphics.g3d.environment.BaseLight;
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.math.Vector3;
 
+/** Note that the default shader doesn't support point lights, you'll have to supply your own shader to use this class.
+ * @author realitix */
 public class SpotLight extends BaseLight {
 	public final Vector3 position = new Vector3();
 	public final Vector3 direction = new Vector3();
 	public float intensity;
-	public float angleCos;
-	
+	public float cutoffAngle;
+
 	public SpotLight set (final SpotLight copyFrom) {
-		return set(copyFrom.color, copyFrom.position, copyFrom.direction, copyFrom.intensity, copyFrom.angleCos);
+		return set(copyFrom.color, copyFrom.position, copyFrom.direction, copyFrom.intensity, copyFrom.cutoffAngle);
 	}
-	
-	public SpotLight set (final Color color, final Vector3 position, final Vector3 direction, final float intensity, final float angleCos) {
+
+	public SpotLight set (final Color color, final Vector3 position, final Vector3 direction, final float intensity,
+		final float cutoffAngle) {
 		if (color != null) this.color.set(color);
 		if (position != null) this.position.set(position);
 		if (direction != null) this.direction.set(direction).nor();
 		this.intensity = intensity;
-		this.angleCos = angleCos;
+		this.cutoffAngle = cutoffAngle;
 		return this;
 	}
 
-	public SpotLight set (final float r, final float g, final float b, final Vector3 position, final Vector3 direction, final float intensity, final float angleCos) {
+	public SpotLight set (final float r, final float g, final float b, final Vector3 position, final Vector3 direction,
+		final float intensity, final float cutoffAngle) {
 		this.color.set(r, g, b, 1f);
 		if (position != null) this.position.set(position);
 		if (direction != null) this.direction.set(direction).nor();
 		this.intensity = intensity;
-		this.angleCos = angleCos;
+		this.cutoffAngle = cutoffAngle;
 		return this;
 	}
 
-	public SpotLight set (final Color color, final float x, final float y, final float z, final float x2, final float y2, final float z2, final float intensity, final float angleCos) {
+	public SpotLight set (final Color color, final float posX, final float posY, final float posZ, final float dirX,
+		final float dirY, final float dirZ, final float intensity, final float cutoffAngle) {
 		if (color != null) this.color.set(color);
-		this.position.set(x, y, z);
-		this.direction.set(x2, y2, z2).nor();
+		this.position.set(posX, posY, posZ);
+		this.direction.set(dirX, dirY, dirZ).nor();
 		this.intensity = intensity;
-		this.angleCos = angleCos;
+		this.cutoffAngle = cutoffAngle;
 		return this;
 	}
 
-	public SpotLight set (final float r, final float g, final float b, final float x, final float y, final float z,
-						  final float x2, final float y2, final float z2, final float intensity, final float angleCos) {
+	public SpotLight set (final float r, final float g, final float b, final float posX, final float posY, final float posZ,
+		final float dirX, final float dirY, final float dirZ, final float intensity, final float cutoffAngle) {
 		this.color.set(r, g, b, 1f);
-		this.position.set(x, y, z);
-		this.direction.set(x2, y2, z2).nor();
+		this.position.set(posX, posY, posZ);
+		this.direction.set(dirX, dirY, dirZ).nor();
 		this.intensity = intensity;
-		this.angleCos = angleCos;
+		this.cutoffAngle = cutoffAngle;
 		return this;
 	}
-	
-	public SpotLight setTarget(final Vector3 target) {
+
+	public SpotLight setTarget (final Vector3 target) {
 		direction.set(target).sub(position).nor();
 		return this;
 	}
@@ -78,6 +83,8 @@ public class SpotLight extends BaseLight {
 	}
 
 	public boolean equals (SpotLight other) {
-		return (other != null && (other == this || (color.equals(other.color) && position.equals(other.position) && direction.equals(other.direction) && intensity == other.intensity && angleCos == other.angleCos)));
+		return (other != null && (other == this || (color.equals(other.color) && position.equals(other.position)
+			&& direction.equals(other.direction) && MathUtils.isEqual(intensity, other.intensity) && MathUtils.isEqual(cutoffAngle,
+			other.cutoffAngle))));
 	}
 }
