@@ -6,6 +6,7 @@
 - DefaultShader now always combines material and environment attributes
 - Added ShapeRenderer constructor to pass a custom shader program to ImmediateModeRenderer20.
 - API Change: Group#toString now returns actor hierarchy. Group#print is gone.
+- Added SpotLight class, see https://github.com/libgdx/libgdx/pull/2907
 
 [1.5.4]
 - Added support for image layers in Tiled maps (TiledMapImageLayer)
